--- a/css/estiloscontac.css
+++ b/css/estiloscontac.css
@@ -64,62 +64,40 @@ ul li ul li a:hover {
     color: #14580d;
 }
 section{
-    width: 100%;
-    height: 80%;
-    background-color: #13440e;
+    background-image: url(../imagenes/retratos/fondo3.jpeg);
 }
-.principal div {
-	display: flex;
-    background-color: #13440e;
-}
-.principal div img{
-    width: 100%;
-    height: 50%;
-}
-.principal h1{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
+section form {
+    position: relative;
     text-align: center;
-}
-.principal p{
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-    padding-top: 1%;
-	padding-right: 2%;
-	padding-bottom: 1%;
-	padding-left: 2%;
-}
-.principal h2{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-}
-.secundario {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.secundario div {
-    background-color: #55c049;
-    width: auto;
-    text-align: center;
-    margin: 10px;
     display: inline-block;
-    border: 0.3vw solid rgb(154, 184, 150);
+    padding: 25% 25%;
+    width: 100%;
 }
-.secundario img {
-    width: 500px;
-    height: 300px;
-    object-fit: cover; 
-}
-h4{
+form label{
+    color: #000000;
     font-size: 20px;
-    color: #ffffff;
 }
+form label, input, textarea{
+    display: block;
+    margin: 10px 0;
+    width: 100%;
+    background-color: transparent;
+    font-size: 20px;
+    font-family: 'Averia Sans Libre', sans-serif;
+}
+form input, textarea{
+    border: 0.3vw solid rgb(0, 0, 0);
+}
+form input[type = "submit"]{
+    border: 0.3vw solid rgb(0, 0, 0);
+    color: #000000;
+    font-size: 20px;
+    font-family: 'Averia Sans Libre', sans-serif;
+    cursor: pointer;
+}
+
+
+
 
 footer {
     text-align: center;
@@ -128,6 +106,7 @@ footer {
 	padding-bottom: 1%;
 	padding-left: 2%;
     background-color: #55c049;
+    
 }
 
 footer img {
