--- a/css/estilospers.css
+++ b/css/estilospers.css
@@ -68,56 +68,34 @@ section{
     height: 80%;
     background-color: #13440e;
 }
-.principal div {
-	display: flex;
-    background-color: #13440e;
-}
-.principal div img{
-    width: 100%;
-    height: 50%;
-}
-.principal h1{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-}
-.principal p{
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
+article {
     padding-top: 1%;
 	padding-right: 2%;
 	padding-bottom: 1%;
 	padding-left: 2%;
-}
-.principal h2{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-}
-.secundario {
+    /*border: 0.3vw solid rgb(154, 184, 150);*/
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    
 }
-.secundario div {
-    background-color: #55c049;
-    width: auto;
-    text-align: center;
-    margin: 10px;
-    display: inline-block;
+/*article div{
+    
+    height: 375px;
+}*/
+article div img{
+    width: 250px;
+    height: 100%;
     border: 0.3vw solid rgb(154, 184, 150);
 }
-.secundario img {
-    width: 500px;
-    height: 300px;
-    object-fit: cover; 
+article div h4{
+    padding: 1% 1%;
+    text-align: center;
+    font-size: 45px;
+    color: #ffffff;
 }
-h4{
-    font-size: 20px;
+article div p{
+    padding: 1% 1%;
+    text-align: center;
+    font-size: 23px;
     color: #ffffff;
 }
 
@@ -129,7 +107,6 @@ footer {
 	padding-left: 2%;
     background-color: #55c049;
 }
-
 footer img {
     width: 50px;
     height: 50px;
