--- a/css/estilospersecun.css
+++ b/css/estilospersecun.css
@@ -66,55 +66,28 @@ ul li ul li a:hover {
 section{
     width: 100%;
     height: 80%;
-    background-color: #13440e;
+    background-color: #121d11;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.principal div {
-	display: flex;
-    background-color: #13440e;
-}
-.principal div img{
-    width: 100%;
-    height: 50%;
-}
-.principal h1{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-}
-.principal p{
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-    padding-top: 1%;
-	padding-right: 2%;
-	padding-bottom: 1%;
-	padding-left: 2%;
-}
-.principal h2{
-    font-size: 40px;
-    color: #ffffff;
-    background-color: #13440e;
-    text-align: center;
-}
-.secundario {
+article{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
-.secundario div {
-    background-color: #55c049;
-    width: auto;
+article div{
     text-align: center;
     margin: 10px;
-    display: inline-block;
-    border: 0.3vw solid rgb(154, 184, 150);
+    padding: 1% 2%;
+    
 }
-.secundario img {
-    width: 500px;
-    height: 300px;
-    object-fit: cover; 
+article img{
+    width: 300px;
+    height: 500px;
+    object-fit: cover;
+    border: 0.3vw solid rgb(154, 184, 150);
 }
 h4{
     font-size: 20px;
@@ -129,7 +102,6 @@ footer {
 	padding-left: 2%;
     background-color: #55c049;
 }
-
 footer img {
     width: 50px;
     height: 50px;
