Actualizacion media queries
Agregue la opción de abrir imágenes.

--- a/css/estilospersecun.css
+++ b/css/estilospersecun.css
@@ -28,6 +28,9 @@ ul {
     list-style: none;
     padding: 0;
 }
+ul ul{
+    z-index: 4;
+}
 ul li {
     position: relative;
     display: inline-block;
