--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,9 @@ ul {
     list-style: none;
     padding: 0;
 }
+ul ul{
+    z-index: 4;
+}
 ul li {
     position: relative;
     display: inline-block;
@@ -105,11 +108,12 @@ section{
 }
 .secundario div {
     background-color: #55c049;
-    width: auto;
+    width: fit-content;
     text-align: center;
     margin: 10px;
     display: inline-block;
     border: 0.3vw solid rgb(154, 184, 150);
+    align-items: center;
 }
 .secundario img {
     width: 500px;
@@ -134,4 +138,21 @@ footer img {
     width: 50px;
     height: 50px;
     margin: 0 10px; 
+}
+@media screen and (max-width: 480px){
+
+    .secundario div {
+        background-color: #55c049;
+        width: fit-content;
+        text-align: center;
+        margin: 10px;
+        display: inline-block;
+        border: 0.3vw solid rgb(154, 184, 150);
+        align-items: center;
+    }
+    .secundario img {
+        width: 480px;
+        height: 300px;
+        object-fit: cover; 
+    }
 }
