--- a/css/estiloscomp.css
+++ b/css/estiloscomp.css
@@ -28,6 +28,9 @@ ul {
     list-style: none;
     padding: 0;
 }
+ul ul{
+    z-index: 4;
+}
 ul li {
     position: relative;
     display: inline-block;
@@ -119,4 +122,12 @@ footer img {
     width: 50px;
     height: 50px;
     margin: 0 10px; 
+}
+
+@media screen and (max-width: 480px){
+    article div img{
+        width: 250px;
+        height: 375px;
+        border: 0.3vw solid rgb(154, 184, 150);
+    }
 }
