--- a/css/estiloscontac.css
+++ b/css/estiloscontac.css
@@ -53,6 +53,9 @@ ul li ul {
 ul li:hover ul {
     display: block;
 }
+ul ul{
+    z-index: 4;
+}
 
 ul li ul li {
     display: block;
@@ -65,6 +68,8 @@ ul li ul li a:hover {
 }
 section{
     background-image: url(../imagenes/retratos/fondo3.jpeg);
+    background-size: cover; 
+    background-position: center;
 }
 section form {
     position: relative;
@@ -113,4 +118,8 @@ footer img {
     width: 50px;
     height: 50px;
     margin: 0 10px; 
+}
+
+@media screen and (max-width: 480px){
+
 }
