--- a/css/estilospers.css
+++ b/css/estilospers.css
@@ -28,6 +28,9 @@ ul {
     list-style: none;
     padding: 0;
 }
+ul ul{
+    z-index: 4;
+}
 ul li {
     position: relative;
     display: inline-block;
@@ -84,7 +87,6 @@ article {
 article div img{
     width: 250px;
     height: 100%;
-    border: 0.3vw solid rgb(154, 184, 150);
 }
 article div h4{
     padding: 1% 1%;
@@ -111,4 +113,23 @@ footer img {
     width: 50px;
     height: 50px;
     margin: 0 10px; 
+}
+
+@media screen and (max-width: 480px){
+    article div .finn{
+        width: 250px;
+        height: 400px;
+    }
+    article div .jake{
+        width: 250px;
+        height: 350px;
+    }
+    article div .bmo{
+        width: 250px;
+        height: 300px;
+    }
+    article div .dulprin{
+        width: 250px;
+        height: 250px;
+    }
 }
