--- a/css/estiloscontac.css
+++ b/css/estiloscontac.css
@@ -67,7 +67,7 @@ ul li ul li a:hover {
     color: #14580d;
 }
 section{
-    background-image: url(../imagenes/retratos/fondo3.jpeg);
+    background-image: url(../imagenes/retratos/fondo3.jpg);
     background-size: cover; 
     background-position: center;
 }
