--- a/css/estilospersecun.css
+++ b/css/estilospersecun.css
@@ -69,7 +69,7 @@ ul li ul li a:hover {
 section{
     width: 100%;
     height: 80%;
-    background-color: #121d11;
+    background-color: #13440e;
     display: flex;
     justify-content: center;
     align-items: center;
