--- a/css/estiloscomp.css
+++ b/css/estiloscomp.css
@@ -130,4 +130,10 @@ footer img {
         height: 375px;
         border: 0.3vw solid rgb(154, 184, 150);
     }
+    article {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
