--- a/css/estilospers.css
+++ b/css/estilospers.css
@@ -132,4 +132,10 @@ footer img {
         width: 250px;
         height: 250px;
     }
+    article {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
