--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,8 +20,8 @@ nav{
     font-size: 20px;
 }
 header div a img{
-    width: 120px;
-    height: 90px;
+    width: 140px;
+    height: 100px;
     padding: 0;
 }
 ul ul{
@@ -89,7 +89,7 @@ section{
     font-size: 20px;
     color: #ffffff;
     background-color: #13440e;
-    text-align: center;
+    text-align: left;
     padding-top: 1%;
 	padding-right: 2%;
 	padding-bottom: 1%;
