--- a/css/estilosfanart.css
+++ b/css/estilosfanart.css
@@ -60,53 +60,38 @@ ul li:hover ul {
 ul li ul li {
     display: block;
 }
-/*ul li ul li:hover {
-    background-color: #14580d;
-}*/
+
 ul li ul li a:hover {
     color: #14580d;
 }
+
 section{
     width: 100%;
     height: 80%;
     background-color: #13440e;
-}
-article {
-    padding-top: 1%;
-	padding-right: 2%;
-	padding-bottom: 1%;
-	padding-left: 2%;
-    /*border: 0.3vw solid rgb(154, 184, 150);*/
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+article{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+article div{
+    text-align: center;
+    margin: 10px;
+    padding: 1% 2%;
     
 }
-/*article div{
-    
-    height: 375px;
-}*/
-article div img{
-    width: 250px;
-    height: 100%;
-    border: 0.3vw solid rgb(154, 184, 150);
+article img{
+    width: 300px;
+    height: 500px;
+    object-fit: cover;
 }
-article div h4{
-    padding-top: 1%;
-	padding-right: 1%;
-	padding-bottom: 1%;
-	padding-left: 1%;
-    text-align: left;
-    font-size: 45px;
-    color: #ffffff;
-}
-article div p{
-    padding-top: 1%;
-	padding-right: 1%;
-	padding-bottom: 1%;
-	padding-left: 1%;
-    text-align: left;
-    font-size: 23px;
-    color: #ffffff;
-}
+
+
 
 footer {
     text-align: center;
@@ -115,28 +100,9 @@ footer {
 	padding-bottom: 1%;
 	padding-left: 2%;
     background-color: #55c049;
-    
 }
-
 footer img {
     width: 50px;
     height: 50px;
     margin: 0 10px; 
-}
-
-@media screen and (max-width: 480px){
-    article div img{
-        width: 250px;
-        height: 375px;
-        border: 0.3vw solid rgb(154, 184, 150);
-    }
-    article {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    article div h4{
-        text-align: center;
-    }
 }
