--- a/css/estilospers.css
+++ b/css/estilospers.css
@@ -20,8 +20,8 @@ nav{
     font-size: 20px;
 }
 header div a img{
-    width: 120px;
-    height: 90px;
+    width: 140px;
+    height: 100px;
     padding: 0;
 }
 ul {
@@ -90,13 +90,13 @@ article div img{
 }
 article div h4{
     padding: 1% 1%;
-    text-align: center;
+    text-align: left;
     font-size: 45px;
     color: #ffffff;
 }
 article div p{
     padding: 1% 1%;
-    text-align: center;
+    text-align: left;
     font-size: 23px;
     color: #ffffff;
 }
@@ -136,6 +136,9 @@ footer img {
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-align: center;
+    }
+    article div h4{
         text-align: center;
     }
 }
