--- a/css/estiloscomp.css
+++ b/css/estiloscomp.css
@@ -2,70 +2,77 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-}
-body {
     font-family: 'Averia Sans Libre', sans-serif;
 }
 header{
-	padding-top: 1%;
-	padding-right: 2%;
-	padding-bottom: 1%;
-	padding-left: 2%;
+	padding: 1rem;
 	display: flex;
 	justify-content: space-between;
     background-color: #55c049;
 }
-nav{
-    background-color: #55c049;
-    font-size: 20px;
+.nav{
+    align-items: center;
 }
-header div a img{
-    width: 140px;
-    height: 100px;
-    padding: 0;
+.logo{
+    width: 120px;
+    height: 90px;
 }
-ul {
-    list-style: none;
-    padding: 0;
-}
-ul ul{
+.nav-list ul{
     z-index: 4;
 }
-ul li {
-    position: relative;
-    display: inline-block;
+.nav-list{
+    list-style-type: none;
+    display: flex;
+    gap: 1rem;
 }
-ul li a {
+.nav-list li{
+    margin-top: 30px ;
+}
+.nav-list li a{
     text-decoration: none;
-    padding: 35px 20px;
-    display: block;
     color: #ffffff;
+    display: block;
+    font-size: 20px;
 }
-ul li a:hover{
+.nav-list li a:hover{
     color: #14580d;
 }
-ul li ul {
+.nav-list li ul {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
     background-color: #348a2c;
-    list-style: none;
-    padding: 0;
+    list-style-type: disc;
+    top: 100%;
 }
-ul li:hover ul {
+.nav-list li ul li {
+    display: block;
+    margin: 10px 0;
+}
+.nav-list li ul li a:hover {
+    color: #13440e;
+}
+
+.abrir-menu,
+.cerrar-menu{
+    display: none;
+}
+.dropdown{
+    position: relative;
+}
+.dropdown-menu{
+    list-style-type: none;
+    position: absolute;
+    display: none;
+}
+.dropdown:hover .dropdown-menu {
     display: block;
 }
 
-ul li ul li {
-    display: block;
-}
-/*ul li ul li:hover {
-    background-color: #14580d;
-}*/
-ul li ul li a:hover {
-    color: #14580d;
-}
+
+
+
+
+
 section{
     width: 100%;
     height: 80%;
@@ -76,14 +83,10 @@ article {
 	padding-right: 2%;
 	padding-bottom: 1%;
 	padding-left: 2%;
-    /*border: 0.3vw solid rgb(154, 184, 150);*/
     display: flex;
     
 }
-/*article div{
-    
-    height: 375px;
-}*/
+
 article div img{
     width: 250px;
     height: 100%;
@@ -124,6 +127,7 @@ footer img {
     margin: 0 10px; 
 }
 
+
 @media screen and (max-width: 480px){
     article div img{
         width: 250px;
@@ -139,4 +143,53 @@ footer img {
     article div h4{
         text-align: center;
     }
+    
+
+
+    .abrir-menu,
+    .cerrar-menu{
+        display: block;
+        border: 0;
+        font-size: 1.25rem;
+        background-color: transparent;
+        cursor: pointer;
+    }
+    .abrir-menu{
+        color: #ffffff;
+    }
+    .cerrar-menu{
+        color: #ffffff;
+    }
+
+    .nav{
+        opacity: 0;
+        visibility: hidden;
+    }
+    .nav{
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #55c049;
+        padding: 1rem;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+    }
+    .nav.visible{
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .nav-list{
+        flex-direction: column;
+        align-items: end;
+    }
+    .nav-list li a{
+        color: #ffffff;
+        font-size: 20px;
+    }
+
 }
