--- a/css/estiloscontac.css
+++ b/css/estiloscontac.css
@@ -60,9 +60,7 @@ ul ul{
 ul li ul li {
     display: block;
 }
-/*ul li ul li:hover {
-    background-color: #14580d;
-}*/
+
 ul li ul li a:hover {
     color: #14580d;
 }
@@ -79,23 +77,23 @@ section form {
     width: 100%;
 }
 form label{
-    color: #000000;
+    color: #ffffff;
     font-size: 20px;
 }
 form label, input, textarea{
     display: block;
     margin: 10px 0;
     width: 100%;
-    background-color: transparent;
     font-size: 20px;
     font-family: 'Averia Sans Libre', sans-serif;
 }
 form input, textarea{
-    border: 0.3vw solid rgb(0, 0, 0);
+    border: 0.3vw solid rgb(255, 255, 255);
+    background-color: #00000041;
 }
 form input[type = "submit"]{
-    border: 0.3vw solid rgb(0, 0, 0);
-    color: #000000;
+    border: 0.3vw solid rgb(255, 255, 255);
+    color: #ffffff;
     font-size: 20px;
     font-family: 'Averia Sans Libre', sans-serif;
     cursor: pointer;
