--- a/css/estiloscomp.css
+++ b/css/estiloscomp.css
@@ -23,7 +23,7 @@ header{
 .nav-list{
     list-style-type: none;
     display: flex;
-    gap: 1rem;
+    /*gap: 1rem;*/
 }
 .nav-list li{
     margin-top: 30px ;
@@ -33,6 +33,7 @@ header{
     color: #ffffff;
     display: block;
     font-size: 20px;
+    padding: 0 10px;
 }
 .nav-list li a:hover{
     color: #14580d;
@@ -71,6 +72,11 @@ header{
 
 
 
+h1{
+    text-align: center;
+    font-size: 45px;
+    color: #ffffff;
+}
 
 
 section{
@@ -92,7 +98,7 @@ article div img{
     height: 100%;
     border: 0.3vw solid rgb(154, 184, 150);
 }
-article div h4{
+article div h2{
     padding-top: 1%;
 	padding-right: 1%;
 	padding-bottom: 1%;
@@ -140,8 +146,12 @@ footer img {
         align-items: center;
         text-align: center;
     }
-    article div h4{
+    article div h2{
         text-align: center;
+    }
+    .fiocake{
+        width: 300px;
+        height: 375px;
     }
     
 
@@ -150,7 +160,7 @@ footer img {
     .cerrar-menu{
         display: block;
         border: 0;
-        font-size: 1.25rem;
+        font-size: 2.5rem;
         background-color: transparent;
         cursor: pointer;
     }
@@ -173,16 +183,16 @@ footer img {
         position: absolute;
         top: 0;
         right: 0;
-        bottom: 0;
+        /*bottom: 0;*/
         background-color: #55c049;
         padding: 1rem;
         box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+        z-index: 4;
     }
     .nav.visible{
         opacity: 1;
         visibility: visible;
     }
-
     .nav-list{
         flex-direction: column;
         align-items: end;
@@ -191,5 +201,8 @@ footer img {
         color: #ffffff;
         font-size: 20px;
     }
-
+    .nav-list ul{
+        z-index: 4;
+    }
+    
 }
